--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,32 @@
-// Place all the styles related to the rooms controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.body { 
+font-family: 'Raleway', sans-serif; 
+text-align: center;
+}
+
+.header-title {
+		border: 1px solid;
+		border-radius: 5px;
+		margin: 0 40%;
+}
+
+.message-holder {
+    position:fixed;
+    bottom:0;
+    left:0;
+    padding-left: 25px;
+    padding-bottom: 100px;
+    z-index: -10;
+}
+
+.set-sizes {
+	width: 1200px;
+	height: 100px;
+}
+
+#messages {
+	text-align: left;
+	padding-left: 20px;
+}
+#subtitle {
+	color:blue;
+}
