--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,5 @@
-<div class=“message”>
-  <p><%= message.content %></p>
+<div class="form-box">
+	<div class="message">
+	<p><%= message.content %></p>
+	</div>		
 </div>
