--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,10 +1,21 @@
-<h1>Chat room</h1>
-  
-<div id="messages">
-  <%= render @messages %>
+<header>
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+</header>
+
+<div class="body">
+
+<div id="subtitle"> <h3>A cool example of using <a href="https://github.com/rails/rails/tree/master/actioncable">Active Cable</a> in Rails 5 ♥</h3> </div>
+	<div class="header-title">
+		<h1>Chat</h1> 
+	</div>
+
+	<div id="messages"></div>
+
+	  <div class="message-holder">
+		<label>Message:</label> 
+		<form name="test-form">
+		  <textarea class="set-sizes" data-behavior="room_speaker"/>
+		</form>
+	</div>
+
 </div>
-  
-<form>
-  <label>Say something:</label><br>
-  <input type="text" data-behavior="room_speaker">
-</form>
